// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkPanel dark mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(29, 27, 32)",
        "borderColor": null,
        "borderRadius": 4,
        "borderWidth": 0,
      },
      Object {
        "padding": 16,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(255, 255, 255)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;

exports[`Android BpkPanel light mode should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;

exports[`Android BpkPanel should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
    ]
  }
  testID="arbitrary value"
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;

exports[`Android BpkPanel should render correctly with custom style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "padding": 16,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;

exports[`Android BpkPanel should render correctly without padding 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderColor": "rgb(221, 221, 229)",
        "borderRadius": 4,
        "borderWidth": 1,
      },
    ]
  }
>
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "rgb(17, 18, 54)",
          "fontFamily": "sans-serif",
          "fontSize": 16,
          "fontWeight": "400",
          "letterSpacing": -0.2,
          "textAlign": "left",
        },
        Object {},
      ]
    }
  >
    Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
  </Text>
</View>
`;
